--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -87,7 +87,7 @@ MainMenu.About.ToolTip=Shows the information about this program (author, version
 
 BalanceHistory.balance=Balance at {0} : {1}
 
-AboutDialog.Content=Author : {0} \nVersion : {1}
+AboutDialog.Content=<html>Author : <b>{0}</b><br>Version : <b>{1}</b></html>
 
 NewAccountDialog.title=Account creation
 NewBankAccountDialog.account=Account :
