--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -88,6 +88,9 @@ MainMenu.About.ToolTip=Shows the information about this program (author, version
 BalanceHistory.balance=Balance at {0} : {1}
 
 AboutDialog.Content=<html>Author : <b>{0}</b><br>Version : <b>{1}</b></html>
+AboutDialog.Content=<html>Copyright &copy; 2009 <b>{0}</b> - All rigths reserved<br>Version : <b>{1}</b></html>
+AboutDialog.License.TabName=License
+AboutDialog.RelNotes.TabName=Release notes
 
 NewAccountDialog.title=Account creation
 NewBankAccountDialog.account=Account :
