--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -80,7 +80,6 @@ MainMenu.QuestionMark=?
 MainMenu.QuestionMark.Mnemonic=?
 MainMenu.QuestionMark.ToolTip=This menu contains some help
 
-
 MainMenu.About=About ...
 MainMenu.About.Mnemonic=A
 MainMenu.About.ToolTip=Shows the information about this program (author, version ...)
@@ -116,3 +115,15 @@ GenericButton.cancel=Cancel
 GenericButton.cancel.toolTip=Cancels the current operation
 GenericButton.ok=Ok
 GenericButton.ok.toolTip=Validates the current operation
+
+Transaction.0=S/T
+Transaction.account=Account
+Transaction.14=Remainder
+Transaction.date=Date
+Transaction.description=Description
+Transaction.amount=Amount
+Transaction.category=Category
+Transaction.mode=Mode
+Transaction.number=Number
+Transaction.valueDate=Value date
+Transaction.statement=Statement
