--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -84,7 +84,8 @@ MainMenu.About=About ...
 MainMenu.About.Mnemonic=A
 MainMenu.About.ToolTip=Shows the information about this program (author, version ...)
 
-BalanceHistory.balance=Balance at {0} : {1}
+BalanceHistory.balance={0} balance : {1}
+BalanceHistory.showGrid=Show grid
 
 AboutDialog.Content=<html>Author : <b>{0}</b><br>Version : <b>{1}</b></html>
 AboutDialog.Content=<html>Copyright &copy; 2009 <b>{0}</b> - All rigths reserved<br>Version : <b>{1}</b></html>
@@ -127,3 +128,40 @@ Transaction.mode=Mode
 Transaction.number=Number
 Transaction.valueDate=Value date
 Transaction.statement=Statement
+
+TransactionDialog.account.new.tooltip=Click here to create a new account
+TransactionDialog.account.tooltip=Select in this menu the transaction's account
+TransactionDialog.amount=Amount :
+TransactionDialog.amount.tooltip=Type here the transaction's amount
+TransactionDialog.bad.amount=This button is disabled because the transaction's amount is invalid
+TransactionDialog.bad.date=This button is disabled because the transaction's date is invalid
+TransactionDialog.bad.valueDate=This button is disabled because the transaction's value date is invalid
+TransactionDialog.category=Category :
+TransactionDialog.category.new.tooltip=Click this button to create a new category
+TransactionDialog.date=Date :
+TransactionDialog.description=Description :
+TransactionDialog.mode=Mode :
+TransactionDialog.mode.new.tooltip=Click here to create a new mode
+TransactionDialog.mode.tooltip=Choose the mode in this menu
+TransactionDialog.needAccount=You have to create at least an account before being able to create transactions
+TransactionDialog.number=Number :
+TransactionDialog.receipt=Receipt
+TransactionDialog.statement=Statement :
+TransactionDialog.title.new=New transaction
+TransactionDialog.valueDate=Value date :
+TransactionDialog.SubPanel.add=Add to transaction
+TransactionDialog.SubPanel.add.tooltip=Check this box to update the transaction amount when a subtransaction changes or is added
+TransactionDialog.SubPanel.delete=Delete
+TransactionDialog.SubPanel.modify=Modify
+TransactionDialog.SubPanel.new=New
+TransactionDialog.SubPanel.title=Subtransactions
+TransactionDialog.SubPanel.total=Subtransactions total : {0,number,currency}
+SubTransactionDialog.empty.amount=This button is disabled because the amount is not documented
+SubTransactionDialog.empty.desciption=This button is disabled because the description is empty
+SubTransactionDialog.null.amount=This button is disabled because the amount is null
+SubTransactionDialog.title.new=New subtransaction
+SubTransactionDialog.description.tooltip=Enter the subtransaction's description here
+SubTransactionDialog.receipt.tooltip=Check this box if the subtransaction is a receipt
+
+Category.undefined=Undefined
+Mode.undefined=Undefined
