--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -19,6 +19,7 @@ MainMenu.Open=Open
 MainMenu.Open.Mnemonic=O
 MainMenu.Open.Accelerator=O
 MainMenu.Open.ToolTip=Opens account file
+MainMenu.Open.Error.DialogContent=Sorry, reading file {0} failed.\n Maybe the file is corrupted.
 
 MainMenu.Save=Save
 MainMenu.Save.Mnemonic=S
@@ -92,20 +93,45 @@ AboutDialog.Content=<html>Copyright &copy; 2009 <b>{0}</b> - All rigths reserved
 AboutDialog.License.TabName=License
 AboutDialog.RelNotes.TabName=Release notes
 
-NewAccountDialog.title=Account creation
-NewBankAccountDialog.account=Account :
-NewBankAccountDialog.account.tooltip=Type here the account id
-NewBankAccountDialog.balance=Balance
-NewBankAccountDialog.balance.tooltip=Type here the initial account balance
-NewBankAccountDialog.err1=This button is disabled because the account name is empty
-NewBankAccountDialog.err2=This button is disabled because an account with the same name already exists
-NewBankAccountDialog.err3=This button is disabled because the balance is not a number
+AccountDialog.title=Account creation
+AccountDialog.account=Account :
+AccountDialog.account.tooltip=Type here the account id
+AccountDialog.balance=Balance :
+AccountDialog.balance.tooltip=Type here the initial account balance
+AccountDialog.err1=This button is disabled because the account name is empty
+AccountDialog.err2=This button is disabled because an account with the same name already exists
+AccountDialog.err3=This button is disabled because the balance is not a number
 
-NewCategoryDialog.title=Category creation
-NewCategoryDialog.category=Category :
-NewCategoryDialog.category.tooltip=Type here the category id
-NewCategoryDialog.err1=This button is disabled because the category id is empty
-NewCategoryDialog.err2=This button is disabled because a category with the same name already exists
+CheckModePanel.statement.tooltip=You have to type here a statement id
+CheckModePanel.title=Statement mode
+CheckModePanel.title.tooltip=Check this box to enable the statement mode (a double click on a transaction will check it)
+CheckModePanel.valueDate.tooltip=Enter the value date to apply to the checked transactions
+CheckModePanel.valueDateEnabled=Change value date by
+CheckModePanel.valueDateEnabled.toolTip=Check this box to change the value date of checked transactions by the one in next field
+
+ModeDialog.new.title=New payment mode
+ModeDialog.account=Account : {0}
+ModeDialog.name=Name :
+ModeDialog.forDebts=Usable for debts
+ModeDialog.forReceipts=Usable for receipts
+ModeDialog.useCheckBook=Use a chequebook
+ModeDialog.bad.debt=This button is disabled because debt informations are inconsistent
+ModeDialog.bad.receipt=This button is disabled because receipt informations are inconsistent
+ModeDialog.bad.duplicateMode=This button is disabled because mode {0} already exists in {1} account
+ModeDialog.bad.emptyName=This button is disabled because its name is empty
+ModeDialog.bad.neverAvalaible=This button is disabled because debt nor receipt are allowed
+ModeDialog.daysNumber=Number of days :
+ModeDialog.debt=Debt date :
+ModeDialog.deferred=Deferred
+ModeDialog.immediate=Immediate
+ModeDialog.relative=Relative
+ModeDialog.stop=Settlement date :
+
+CategoryDialog.title=Category creation
+CategoryDialog.category=Category :
+CategoryDialog.category.tooltip=Type here the category id
+CategoryDialog.err1=This button is disabled because the category id is empty
+CategoryDialog.err2=This button is disabled because a category with the same name already exists
 
 NotSavedDialog.ignore=Ignore
 NotSavedDialog.message=Some changes are not saved. What do we do ?
@@ -148,6 +174,7 @@ TransactionDialog.number=Number :
 TransactionDialog.receipt=Receipt
 TransactionDialog.statement=Statement :
 TransactionDialog.title.new=New transaction
+TransactionDialog.title.edit=Edit transaction
 TransactionDialog.valueDate=Value date :
 TransactionDialog.SubPanel.add=Add to transaction
 TransactionDialog.SubPanel.add.tooltip=Check this box to update the transaction amount when a subtransaction changes or is added
@@ -160,8 +187,11 @@ SubTransactionDialog.empty.amount=This button is disabled because the amount is 
 SubTransactionDialog.empty.desciption=This button is disabled because the description is empty
 SubTransactionDialog.null.amount=This button is disabled because the amount is null
 SubTransactionDialog.title.new=New subtransaction
+SubTransactionDialog.title.edit=Edit subtransaction
 SubTransactionDialog.description.tooltip=Enter the subtransaction's description here
 SubTransactionDialog.receipt.tooltip=Check this box if the subtransaction is a receipt
 
 Category.undefined=Undefined
 Mode.undefined=Undefined
+
+VersionManager.unknown=Unknown
