--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -65,7 +65,7 @@ MainMenu.Transactions.Edit.ToolTip=Edits the selected transaction
 
 MainMenu.Transactions.Periodical=Generate periodical transactions
 MainMenu.Transactions.Periodical.Mnemonic=P;
-MainMenu.Transactions.Periodical.ToolTip=Create periodical transactions
+MainMenu.Transactions.Periodical.ToolTip=Generate periodical transactions
 
 MainMenuBar.Filter=Filter
 MainMenuBar.Filter.Tooltip=This menu allows you to filter the transaction table
