--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -61,11 +61,15 @@ MainMenu.Transactions.Delete.Accelerator=D
 MainMenu.Transactions.Delete.ToolTip=Deletes the selected transaction
 
 MainMenu.Transactions.Edit=Edit transaction
+MainMenu.Transactions.Edit.Mnemonic=E
 MainMenu.Transactions.Edit.ToolTip=Edits the selected transaction
 
 MainMenu.Transactions.Periodical=Generate periodical transactions
 MainMenu.Transactions.Periodical.Mnemonic=P;
 MainMenu.Transactions.Periodical.ToolTip=Generate periodical transactions
+MainMenu.Transactions.ManagePeriodicals=Manage periodical transactions
+MainMenu.Transactions.ManagePeriodicals.Mnemonic=D;
+MainMenu.Transactions.ManagePeriodicals.ToolTip=Manage periodical transactions (add new one, delete, modify)
 
 MainMenuBar.Filter=Filter
 MainMenuBar.Filter.Tooltip=This menu allows you to filter the transaction table
