--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -30,6 +30,10 @@ MainMenu.SaveAs=Save as ...
 MainMenu.SaveAs.Mnemonic=A
 MainMenu.SaveAs.ToolTip=Creates a copy of the currently opened account file
 
+MainMenu.Preferences=Preferences
+MainMenu.Preferences.ToolTip=Open the preferences management screen
+MainMenu.Preferences.Mnemonic=P
+
 MainMenu.Quit=Quit
 MainMenu.Quit.Mnemonic=Q
 MainMenu.Quit.Accelerator=Q
