--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -202,4 +202,19 @@ SubTransactionDialog.receipt.tooltip=Check this box if the subtransaction is a r
 Category.undefined=Undefined
 Mode.undefined=Undefined
 
+PreferencesDialog.title=Preferences
+PreferencesDialog.Localization.title=Localization
+PreferencesDialog.Localization.country=Country
+PreferencesDialog.Localization.customCountry=Custom
+PreferencesDialog.Localization.customCountry.tooTip=Select this item, or select your country in the following list to choose a country different from your default system's country
+PreferencesDialog.Localization.defaultCountry=Default ({0})
+PreferencesDialog.Localization.defaultCountry.toolTip=Select this item to choose your default system's country ({0})
+PreferencesDialog.Localization.defaultLanguage=System's language (or english if this language is not available in Yapbam)
+PreferencesDialog.Localization.defaultLanguage.toolTip=Choose this item to use your system's default language (or english if this language not available in Yapbam)
+PreferencesDialog.Localization.language=Language
+PreferencesDialog.Localization.revert=Revert
+PreferencesDialog.Localization.revert.toolTip=Revert to the current settings
+
+PreferencesDialog.LookAndFeel.title=Look and feel
+
 VersionManager.unknown=Unknown
