--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -216,5 +216,9 @@ PreferencesDialog.Localization.revert=Revert
 PreferencesDialog.Localization.revert.toolTip=Revert to the current settings
 
 PreferencesDialog.LookAndFeel.title=Look and feel
+PreferencesDialog.LookAndFeel.java=System independent appearance
+PreferencesDialog.LookAndFeel.java.toolTip=Click this button to have Yapbam using a system independant appearance
+PreferencesDialog.LookAndFeel.platform=Default system appearance
+PreferencesDialog.LookAndFeel.platform.toolTip=Click this button to have Yapbam using the system default appearance
 
 VersionManager.unknown=Unknown
