--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -187,7 +187,7 @@ TransactionDialog.valueDate=Value date :
 TransactionDialog.SubPanel.add=Add to transaction
 TransactionDialog.SubPanel.add.tooltip=Check this box to update the transaction amount when a subtransaction changes or is added
 TransactionDialog.SubPanel.delete=Delete
-TransactionDialog.SubPanel.modify=Modify
+TransactionDialog.SubPanel.modify=Edit
 TransactionDialog.SubPanel.new=New
 TransactionDialog.SubPanel.title=Subtransactions
 TransactionDialog.SubPanel.total=Subtransactions total : {0,number,currency}
@@ -220,5 +220,7 @@ PreferencesDialog.LookAndFeel.java=System independent appearance
 PreferencesDialog.LookAndFeel.java.toolTip=Click this button to have Yapbam using a system independant appearance
 PreferencesDialog.LookAndFeel.platform=Default system appearance
 PreferencesDialog.LookAndFeel.platform.toolTip=Click this button to have Yapbam using the system default appearance
+
+PeriodicManagementDialog.title=Periodic transactions management
 
 VersionManager.unknown=Unknown
