--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -101,7 +101,7 @@ AboutDialog.RelNotes.TabName=Release notes
 AccountDialog.title=Account creation
 AccountDialog.account=Account :
 AccountDialog.account.tooltip=Type here the account id
-AccountDialog.balance=Balance :
+AccountDialog.balance=Initial balance :
 AccountDialog.balance.tooltip=Type here the initial account balance
 AccountDialog.err1=This button is disabled because the account name is empty
 AccountDialog.err2=This button is disabled because an account with the same name already exists
