--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -98,7 +98,8 @@ AboutDialog.Content=<html>Copyright &copy; 2009 <b>{0}</b> - All rigths reserved
 AboutDialog.License.TabName=License
 AboutDialog.RelNotes.TabName=Release notes
 
-AccountDialog.title=Account creation
+AccountDialog.title.new=New account
+AccountDialog.title.edit=Edit account
 AccountDialog.account=Account :
 AccountDialog.account.tooltip=Type here the account id
 AccountDialog.balance=Initial balance :
@@ -114,7 +115,8 @@ CheckModePanel.valueDate.tooltip=Enter the value date to apply to the checked tr
 CheckModePanel.valueDateEnabled=Change value date by
 CheckModePanel.valueDateEnabled.toolTip=Check this box to change the value date of checked transactions by the one in next field
 
-ModeDialog.new.title=New payment mode
+ModeDialog.title.new=New payment mode
+ModeDialog.title.edit=Edit payment mode
 ModeDialog.account=Account : {0}
 ModeDialog.name=Name :
 ModeDialog.forDebts=Usable for debts
