--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -90,6 +90,14 @@ MainMenu.About=About ...
 MainMenu.About.Mnemonic=A
 MainMenu.About.ToolTip=Shows the information about this program (author, version ...)
 
+MainMenu.CheckUpdate=Check for updates
+MainMenu.MainMenu.CheckUpdate.ToolTip=Checks for updates over the Internet
+MainMenu.CheckUpdate.Error.title=Unable to check for updates
+MainMenu.CheckUpdate.HttpError=<HTML><BODY>Communication problem with update server : <B>HttpError {0,number}</B><BR><BR>This server is probably temporarily down.<BR><BR>Please retry later, if it not succeed, have a look at <a href="{1}">{1}</a></BODY></HTML>
+MainMenu.CheckUpdate.IOError=<HTML><BODY>Communication problem with update server : <B>{0}</B><BR><BR>Please verify your Internet connection and the Yapbam proxy configuraton in the preferences.<BR><BR>If you still have the problem, please have a look at <a href="{1}">{1}</a></BODY></HTML>
+MainMenu.CheckUpdate.Success=<HTML><BODY>A new <B>Yapbam</B> release is available.<BR><BR>Your version : <B>{0}</B><BR>Latest published : <B>{1}</B><BR><BR>You can download this update at <a href="{2}">{2}</a></BODY></HTML>
+MainMenu.CheckUpdate.Success.title=A new update is available
+
 BalanceHistory.balance={0} balance : {1}
 BalanceHistory.showGrid=Show grid
 
@@ -221,5 +229,3 @@ PreferencesDialog.LookAndFeel.platform=Default system appearance
 PreferencesDialog.LookAndFeel.platform.toolTip=Click this button to have Yapbam using the system default appearance
 
 PeriodicManagementDialog.title=Periodic transactions management
-
-VersionManager.unknown=Unknown
