--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -95,8 +95,11 @@ MainMenu.MainMenu.CheckUpdate.ToolTip=Checks for updates over the Internet
 MainMenu.CheckUpdate.Error.title=Unable to check for updates
 MainMenu.CheckUpdate.HttpError=<HTML><BODY>Communication problem with update server : <B>HttpError {0,number}</B><BR><BR>This server is probably temporarily down.<BR><BR>Please retry later, if it not succeed, have a look at <a href="{1}">{1}</a></BODY></HTML>
 MainMenu.CheckUpdate.IOError=<HTML><BODY>Communication problem with update server : <B>{0}</B><BR><BR>Please check your Internet connection (Yapbam is not yet able to connect to the Internet through a proxy).<BR><BR>If you still have problem, please have a look at <a href="{1}">{1}</a></BODY></HTML>
-MainMenu.CheckUpdate.Success=<HTML><BODY>A new <B>Yapbam</B> release is available.<BR><BR>Your version : <B>{0}</B><BR>Latest published : <B>{1}</B><BR><BR>You can download this update at <a href="{2}">{2}</a></BODY></HTML>
+MainMenu.CheckUpdate.Success.Header=<HTML><BODY>A new <B>Yapbam</B> release is available.</BODY></HTML>
+MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Your version : <B>{0}</B><BR>Latest published : <B>{1}</B><BR><BR>You can download this update at <a href="{2}">{2}</a></BODY></HTML>
+MainMenu.CheckUpdate.NoUpdate.title=No update available
 MainMenu.CheckUpdate.Success.title=A new update is available
+MainMenu.CheckUpdate.NoUpdate=Yapbam is up to date
 
 BalanceHistory.balance={0} balance : {1}
 BalanceHistory.showGrid=Show grid
@@ -157,6 +160,8 @@ GenericButton.cancel=Cancel
 GenericButton.cancel.toolTip=Cancels the current operation
 GenericButton.ok=Ok
 GenericButton.ok.toolTip=Validates the current operation
+GenericButton.close.ToolTip=This button closes the dialog
+GenericButton.close=Close
 
 Transaction.0=S/T
 Transaction.account=Account
