--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -94,7 +94,7 @@ MainMenu.CheckUpdate=Check for updates
 MainMenu.MainMenu.CheckUpdate.ToolTip=Checks for updates over the Internet
 MainMenu.CheckUpdate.Error.title=Unable to check for updates
 MainMenu.CheckUpdate.HttpError=<HTML><BODY>Communication problem with update server : <B>HttpError {0,number}</B><BR><BR>This server is probably temporarily down.<BR><BR>Please retry later, if it not succeed, have a look at <a href="{1}">{1}</a></BODY></HTML>
-MainMenu.CheckUpdate.IOError=<HTML><BODY>Communication problem with update server : <B>{0}</B><BR><BR>Please check your Internet connection (Yapbam is not yet able to connect to the Internet through a proxy).<BR><BR>If you still have problem, please have a look at <a href="{1}">{1}</a></BODY></HTML>
+MainMenu.CheckUpdate.IOError=<HTML><BODY>Communication problem with update server : <B>{0}</B><BR><BR>Please check your Internet connection or review Yapbam's network settings.<BR><BR>If you still have problem, please have a look at <a href="{1}">{1}</a></BODY></HTML>
 MainMenu.CheckUpdate.Success.Header=<HTML><BODY>A new <B>Yapbam</B> release is available.</BODY></HTML>
 MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Your version : <B>{0}</B><BR>Latest published : <B>{1}</B><BR><BR>You can download this update at <a href="{2}">{2}</a></BODY></HTML>
 MainMenu.CheckUpdate.NoUpdate.title=No update available
@@ -232,5 +232,20 @@ PreferencesDialog.LookAndFeel.java=System independent appearance
 PreferencesDialog.LookAndFeel.java.toolTip=Click this button to have Yapbam using a system independant appearance
 PreferencesDialog.LookAndFeel.platform=Default system appearance
 PreferencesDialog.LookAndFeel.platform.toolTip=Click this button to have Yapbam using the system default appearance
+
+PreferencesDialog.Network.title=Network
+PreferencesDialog.Network.authentication=Authentication
+PreferencesDialog.Network.direct=Direct connection
+PreferencesDialog.Network.direct.tooltip=Select this button if you have a direct connection to the Internet
+PreferencesDialog.Network.password=Password :
+PreferencesDialog.Network.password.tooltip=Type here the proxy user password
+PreferencesDialog.Network.port.label=Port :
+PreferencesDialog.Network.port.tooltip=Type here the proxy port, or nothing to use the default port (3128)
+PreferencesDialog.Network.proxy.label=Proxy :
+PreferencesDialog.Network.proxy.title=Connection through a proxy
+PreferencesDialog.Network.proxy.tooltip=Select this button if you connect to the Internet through a proxy
+PreferencesDialog.Network.proxyField.tooltip=Type here the proxy's IP address or its DNS name
+PreferencesDialog.Network.user=User :
+PreferencesDialog.Network.user.toolTip=Type here the proxy user id
 
 PeriodicManagementDialog.title=Periodic transactions management
