--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -68,6 +68,9 @@ MainMenu.Transactions.Edit=Edit transaction
 MainMenu.Transactions.Edit.Mnemonic=E
 MainMenu.Transactions.Edit.ToolTip=Edits the selected transaction
 
+MainMenu.Transactions.Check=Check transaction
+MainMenu.Transactions.Check.ToolTip=Checks the selected transaction
+
 MainMenu.Transactions.Periodical=Generate periodical transactions
 MainMenu.Transactions.Periodical.Mnemonic=P;
 MainMenu.Transactions.Periodical.ToolTip=Generate periodical transactions
