--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -135,6 +135,9 @@ ModeDialog.account=Account : {0}
 ModeDialog.name=Name :
 ModeDialog.forDebts=Usable for debts
 ModeDialog.forReceipts=Usable for receipts
+ModeDialog.name.short=Name
+ModeDialog.forDebts.short=Debts
+ModeDialog.forReceipts.short=Receipts
 ModeDialog.useCheckBook=Use a chequebook
 ModeDialog.bad.debt=This button is disabled because debt informations are inconsistent
 ModeDialog.bad.receipt=This button is disabled because receipt informations are inconsistent
@@ -147,6 +150,9 @@ ModeDialog.deferred=Deferred
 ModeDialog.immediate=Immediate
 ModeDialog.relative=Relative
 ModeDialog.stop=Settlement date :
+ModeDialog.Delete.tooltip=This button deletes the selected payment mode
+ModeDialog.Edit.tooltip=This button edits the selected payment mode
+ModeDialog.New.tooltip=This button creates a new payment mode
 
 CategoryDialog.title=Category creation
 CategoryDialog.category=Category :
@@ -165,6 +171,9 @@ GenericButton.ok=Ok
 GenericButton.ok.toolTip=Validates the current operation
 GenericButton.close.ToolTip=This button closes the dialog
 GenericButton.close=Close
+GenericButton.new=New
+GenericButton.edit=Edit
+GenericButton.delete=Delete
 
 Transaction.0=S/T
 Transaction.account=Account
