--- a/Yapbam/build.xml
+++ b/Yapbam/build.xml
@@ -13,9 +13,10 @@
 		  </copy>
 		<echo message="version=${yapbamVersion} (${TODAY})" file="src/version.txt"/>
 		<javac srcdir="src" destdir="releaseCompile" target="1.6" encoding="ISO8859-1"/>
+		<javac srcdir="srcLauncher" destdir="releaseCompile" target="1.3" encoding="ISO8859-1"/>
 		<jar destfile="yapbam.jar">
 			<manifest>
-				<attribute name="Main-Class" value="net.yapbam.ihm.MainFrame"/>
+				<attribute name="Main-Class" value="net.yapbam.ihm.Launcher"/>
 				<attribute name="SplashScreen-Image" value="net/yapbam/ihm/images/splash.png"/>
 			</manifest>
 			<fileset dir="releaseCompile"/>
