--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -264,3 +264,5 @@ PreferencesDialog.Network.user=User :
 PreferencesDialog.Network.user.toolTip=Type here the proxy user id
 
 PeriodicManagementDialog.title=Periodic transactions management
+PeriodicalTransactionDialog.title.new=New periodical transaction
+PeriodicalTransactionDialog.title.edit=Edit periodical transaction
