--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -264,5 +264,19 @@ PreferencesDialog.Network.user=User :
 PreferencesDialog.Network.user.toolTip=Type here the proxy user id
 
 PeriodicManagementDialog.title=Periodic transactions management
+PeriodicalTransactionDialog.activated=Activated
+PeriodicalTransactionDialog.activated.toolTip=Uncheck this box to suspend this transaction generation
+PeriodicalTransactionDialog.day.toolTip=Enter the day the transaction will occur here
+PeriodicalTransactionDialog.days=days
+PeriodicalTransactionDialog.months=months
+PeriodicalTransactionDialog.nextDate=Next date : 
+PeriodicalTransactionDialog.nextDate.toolTip=Enter the next transaction date here
+PeriodicalTransactionDialog.period=Then every
+PeriodicalTransactionDialog.step.toolTip=Enter the interval between two transactions here
+PeriodicalTransactionDialog.the=the
 PeriodicalTransactionDialog.title.new=New periodical transaction
 PeriodicalTransactionDialog.title.edit=Edit periodical transaction
+PeriodicalTransactionDialog.error.dateStepper0=The generation period is not well documented
+PeriodicalTransactionDialog.error.nextDate=The next date is invalid
+PeriodicalTransactionDialog.generationBorderTitle=Generation
+PeriodicalTransactionDialog.transactionBorderTitle=Transaction
