--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -177,6 +177,7 @@ GenericButton.close=Close
 GenericButton.new=New
 GenericButton.edit=Edit
 GenericButton.delete=Delete
+GenericButton.duplicate=Duplicate
 
 Transaction.0=S/T
 Transaction.account=Account
@@ -263,7 +264,6 @@ PreferencesDialog.Network.proxyField.tooltip=Type here the proxy's IP address or
 PreferencesDialog.Network.user=User :
 PreferencesDialog.Network.user.toolTip=Type here the proxy user id
 
-PeriodicManagementDialog.title=Periodic transactions management
 PeriodicalTransactionDialog.activated=Activated
 PeriodicalTransactionDialog.activated.toolTip=Uncheck this box to suspend this transaction generation
 PeriodicalTransactionDialog.day.toolTip=Enter the day the transaction will occur here
@@ -280,3 +280,14 @@ PeriodicalTransactionDialog.error.dateStepper0=The generation period is not well
 PeriodicalTransactionDialog.error.nextDate=The next date is invalid
 PeriodicalTransactionDialog.generationBorderTitle=Generation
 PeriodicalTransactionDialog.transactionBorderTitle=Transaction
+PeriodicalTransactionManager.title=Periodic transactions management
+PeriodicalTransactionManager.toolTip=This tab allows you to manage periodicals transactions
+PeriodicalTransactionManager.active.column=Active
+PeriodicalTransactionManager.nextDate.column=Next
+PeriodicalTransactionManager.period.column=Every
+PeriodicalTransactionManager.period.daily.content={0,number} days
+PeriodicalTransactionManager.period.monthly.content={0,number} month the {1,number}
+PeriodicalTransactionManager.new.toolTip=Creates a new periodical transaction
+PeriodicalTransactionManager.delete.toolTip=deletes the selected periodical transaction
+PeriodicalTransactionManager.edit.toolTip=Edits the selected periodical transaction
+PeriodicalTransactionManager.duplicate.toolTip=Duplicates the selected periodical transaction and edits this new created transaction
