--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -1,6 +1,5 @@
 ApplicationName=Yet Another Personal account manager
 
-MainFrame.BalanceHistory=Balance history
 MainFrame.CheckedBalance=Checked balance : {0}
 MainFrame.CurrentBalance=Current balance : {0}
 MainFrame.FinalBalance=Final balance : {0}
@@ -8,6 +7,7 @@ MainFrame.CheckedBalance.ToolTip=Checked balance (unchecked transactions are ign
 MainFrame.CurrentBalance.ToolTip=Current balance (transactions with value date after today are ignored)
 MainFrame.FinalBalance.ToolTip=Final balance (no transactions are ignored)
 MainFrame.Transactions=Transactions
+MainFrame.Transactions.toolTip=Displays the transaction table and some tools to edit, duplicate, check ... transactions
 MainFrame.ReadLastError=An error occurred reading last opened file {0}
 
 MainMenu.File=File
@@ -107,6 +107,8 @@ MainMenu.CheckUpdate.NoUpdate.title=No update available
 MainMenu.CheckUpdate.Success.title=A new update is available
 MainMenu.CheckUpdate.NoUpdate=Yapbam is up to date
 
+BalanceHistory.title=Balance history
+BalanceHistory.toolTip=Day to day balance history chart
 BalanceHistory.balance={0} balance : {1}
 BalanceHistory.showGrid=Show grid
 
@@ -291,3 +293,6 @@ PeriodicalTransactionManager.new.toolTip=Creates a new periodical transaction
 PeriodicalTransactionManager.delete.toolTip=deletes the selected periodical transaction
 PeriodicalTransactionManager.edit.toolTip=Edits the selected periodical transaction
 PeriodicalTransactionManager.duplicate.toolTip=Duplicates the selected periodical transaction and edits this new created transaction
+
+AdministrationPlugIn.title=Administration
+AdministrationPlugIn.toolTip=Add, suppress or edit accounts, categories or periodical transaction with this panel
