--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -73,6 +73,8 @@ MainMenu.Transactions.Edit.ToolTip=Edits the selected transaction
 
 MainMenu.Transactions.Check=Check transaction
 MainMenu.Transactions.Check.ToolTip=Checks the selected transaction
+MainMenu.Transactions.convertToPeriodical=Converts to periodical transaction
+MainMenu.Transactions.convertToPeriodical.ToolTip=Cr\u00E9\u00E9 une nouvelle op\u00E9ration p\u00E9riodique prenant l'op\u00E9ration s\u00E9lectionn\u00E9e comme mod\u00E8le
 
 MainMenu.Transactions.Periodical=Generate periodical transactions
 MainMenu.Transactions.Periodical.Mnemonic=P;
