--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -245,6 +245,7 @@ Mode.undefined=Undefined
 
 PreferencesDialog.title=Preferences
 PreferencesDialog.Localization.title=Localization
+PreferencesDialog.Localization.toolTip=This tab allows you to configure the language and the country (which defines the currency)
 PreferencesDialog.Localization.country=Country
 PreferencesDialog.Localization.customCountry=Custom
 PreferencesDialog.Localization.customCountry.tooTip=Select this item, or select your country in the following list to choose a country different from your default system's country
@@ -256,13 +257,28 @@ PreferencesDialog.Localization.language=Language
 PreferencesDialog.Localization.revert=Revert
 PreferencesDialog.Localization.revert.toolTip=Revert to the current settings
 
+PreferencesDialog.AutoUpdate.atStartup=Check at stratup
+PreferencesDialog.AutoUpdate.atStartup.toolTip=Select this choice to automatically check for updates at startup
+PreferencesDialog.AutoUpdate.days.toolTip=Enter the number of days between to update check (0 to check at every startup)
+PreferencesDialog.AutoUpdate.ifError.dialog=Display an error message
+PreferencesDialog.AutoUpdate.ifError.doNothing=Do nothing
+PreferencesDialog.AutoUpdate.ifError.title=If an error occurs
+PreferencesDialog.AutoUpdate.interval.part1=Every
+PreferencesDialog.AutoUpdate.interval.part2=days
+PreferencesDialog.AutoUpdate.manually=Check manually
+PreferencesDialog.AutoUpdate.manually.toolTip=Select this choice to prevent Yapbam from checking for updates
+PreferencesDialog.AutoUpdate.title=Updates
+PreferencesDialog.AutoUpdate.toolTip=This tab allows you to configure how Yapbam checks for updates over the Internet
+
 PreferencesDialog.LookAndFeel.title=Look and feel
+PreferencesDialog.LookAndFeel.toolTip=This tab allows you to configure Yapbam's look and feel
 PreferencesDialog.LookAndFeel.java=System independent appearance
 PreferencesDialog.LookAndFeel.java.toolTip=Click this button to have Yapbam using a system independant appearance
 PreferencesDialog.LookAndFeel.platform=Default system appearance
 PreferencesDialog.LookAndFeel.platform.toolTip=Click this button to have Yapbam using the system default appearance
 
 PreferencesDialog.Network.title=Network
+PreferencesDialog.Network.toolTip=This tab allows you to set how Yapbam connects to the Internet
 PreferencesDialog.Network.authentication=Authentication
 PreferencesDialog.Network.direct=Direct connection
 PreferencesDialog.Network.direct.tooltip=Select this button if you have a direct connection to the Internet
